<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pantry_pal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_grocery_list"
        android:name="com.example.pantry_pal.ui.grocery_list.GroceryListFragment"
        android:label="@string/title_grocery_list"
        tools:layout="@layout/fragment_grocery_list" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.pantry_pal.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_meal_plan"
        android:name="com.example.pantry_pal.ui.meal_plan.MealPlanFragment"
        android:label="@string/title_meal_plan"
        tools:layout="@layout/fragment_meal_plan" />

</navigation>