<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi_calculator.BmiCalculatorFragment">

    <RadioGroup
        android:id="@+id/unit_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/unit"
        app:layout_constraintTop_toBottomOf="@+id/unit">

        <RadioButton
            android:id="@+id/imperial_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="Imperial" />

        <RadioButton
            android:id="@+id/metric_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metric" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_1_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="ft/m"
        app:layout_constraintStart_toStartOf="@+id/unit_option"
        app:layout_constraintTop_toBottomOf="@+id/unit_option" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_2_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:hint="in/cm"
        app:layout_constraintStart_toEndOf="@+id/height_1_layout"
        app:layout_constraintTop_toBottomOf="@+id/unit_option">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:text="@string/cal_button"
        app:layout_constraintStart_toStartOf="@+id/weight_layout"
        app:layout_constraintTop_toBottomOf="@+id/weight_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_layout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="lbs/kg"
        app:layout_constraintStart_toStartOf="@+id/height_1_layout"
        app:layout_constraintTop_toBottomOf="@+id/height_1_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/bmi_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/weight_layout"
        app:layout_constraintTop_toBottomOf="@+id/weight_layout" />

    <TextView
        android:id="@+id/bmi_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bmi_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/display_bmi"
        app:layout_constraintTop_toBottomOf="@+id/display_bmi" />


</androidx.constraintlayout.widget.ConstraintLayout>